fix inputs color contrast

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -168,6 +168,7 @@
 .input-primary {
   border-radius: 0.8rem;
   border: 2px solid var(--input-border-color);
+  color: var(--primary-text-color);
   background: transparent;
   outline: none;
   padding: 1rem 1.5rem;
